add planner workflow llm nodes config

--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -16,4 +16,11 @@
   "supervisor_agent":
     "model_name": "gpt-4o-mini"
     "temperature": 0
+"planner":
+  "current_state":
+    "model_name": "gpt-4o-mini"
+    "temperature": 0
+  "future_events":
+    "model_name": "gpt-4o-mini"
+    "temperature": 0
 
